Efmub-Ogy/src/objects/Compensation__c.object
<CustomObject>
    <description>Represents compensation to a passenger.</description>
    <fields>
        <fullName>Case__c</fullName>
        <inlineHelpText>The Case to which this Compensation is related.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>The Contact to whom this Compensation is related.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flight_Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Flight Leg to which this Compensation is related.</inlineHelpText>
        <label>Flight Leg</label>
        <referenceTo>Flight_Leg__c</referenceTo>
        <relationshipLabel>Compensations</relationshipLabel>
        <relationshipName>Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Compensation</label>
    <nameField>
        <displayFormat>COMP{00000000}</displayFormat>
        <label>Compensation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>